--- a/Proeqti/Vinyll.ge/index.html
+++ b/Proeqti/Vinyll.ge/index.html
@@ -10,13 +10,13 @@
     <header>
         <nav>
             <div>
-                <a data-i18n="Mtavari" href="#">მთავარი</a>
-                <a href="#">ძირითადი ინფორმაცია</a>
-                <a href="#">კონტაქტი</a>
-                <a href="#">ავტორიზაცია</a>
-                <a href="#">რეგისტრაცია</a>
-                <a href="#">ფილიალები</a>
-                <a href="#">ვაკანსიები</a>
+                <a data-i18n="Mtavari" href="index.html">მთავარი</a>
+                <a data-i18n="dziritadi_informacia" href="#">ძირითადი ინფორმაცია</a>
+                <a data-i18n="kontaqti" href="#">კონტაქტი</a>
+                <a data-i18n="avtorizacia" href="#">ავტორიზაცია</a>
+                <a data-i18n="registracia" href="registration.html">რეგისტრაცია</a>
+                <a data-i18n="filialebi" href="#">ფილიალები</a>
+                <a data-i18n="vakansiebi" href="#">ვაკანსიები</a>
                 <button onclick="Enis_Shecvla('eng')">Eng</button>
                 <button onclick="Enis_Shecvla('geo')">Geo</button>
             </div>
@@ -29,14 +29,18 @@
     <section class="container">
         <div class="slider-wrapper">
             <div class="slider">
-                <img id="slide-1" src="vinil2.jpg"  />
+                <img id="slide-1" src="wallpaperflare.com_wallpaper (1).jpg"  />
                 <img id="slide-2" src="Sekan-at-ZeroZero-1-2.webp"  />
                 <img id="slide-3" src="Gear-Beginners-Vinyl-Buying-Guide-145065177.webp" />
+                <img id="slide-4" src="wallpaperflare.com_wallpaper (2).jpg"  />
+                <img id="slide-5" src="wallpaperflare.com_wallpaper (3).jpg"  />
             </div>
             <div class="slider-nav">
                 <a href="#slide-1"></a>
                 <a href="#slide-2"></a>
                 <a href="#slide-3"></a>
+                <a href="#slide-4"></a>
+                <a href="#slide-5"></a>
             </div>
         </div>
     </section>
@@ -44,7 +48,7 @@
         <div>
             <label for="category">კატეგორია</label> <br>
             <select class="select" id="category">
-                <option value="all">ყველა</option>
+                <option value data-i18n ="all">ყველა</option>
                 <option value="rock">როკი</option>
                 <option value="pop">პოპ</option>
                 <option value="jazz">ჯაზი</option>
@@ -73,12 +77,12 @@
     </div>
     <div class="products">
         <div class="product">
-            <img src="https://placehold.co/200x200" alt="Album cover of Madonna - The First Album">
+            <img src="Madonna-Whos-taht-gorl-2-300x300.jpg" alt="Album cover of Madonna - The First Album">
             <p>Madonna - The First Album</p>
             <p>70 GEL</p>
         </div>
         <div class="product">
-            <img alt="Album cover of Elvis Presley - Elvis Presley" src="https://placehold.co/200x200"/>
+            <img alt="Album cover of Elvis Presley - Elvis Presley" src="elvis-300x300.jpg"/>
             <p>
              Elvis Presley - Elvis Presley
             </p>
@@ -87,115 +91,115 @@
             </p>
            </div>
            <div class="product">
-            <img alt="Album cover of Michael Jackson - Thriller" src="https://placehold.co/200x200"/>
+            <img alt="eminem" src="eminem-1-300x300.jpg"/>
             <p>
-             Michael Jackson - Thriller
+                Eminem - Revival (Sealed)
             </p>
             <p>
              70 GEL
             </p>
            </div>
            <div class="product">
-            <img alt="Album cover of The Beatles - Abbey Road" src="https://placehold.co/200x200"/>
+            <img alt="ივერია" src="ივრია-1978-300x300.jpg"/>
             <p>
-             The Beatles - Abbey Road
+                ივერია - ალბომი ივერია (ახალი)
             </p>
             <p>
              70 GEL
             </p>
            </div>
            <div class="product">
-            <img alt="Album cover of Queen - Greatest Hits" src="https://placehold.co/200x200"/>
+            <img alt="Fleetwood Mac – Rumours (Sealed)" src="Fleetwood-Mac-Romors-300x300.jpeg"/>
             <p>
-             Queen - Greatest Hits
+                Fleetwood Mac – Rumours (Sealed)
             </p>
             <p>
              70 GEL
             </p>
            </div>
            <div class="product">
-            <img alt="Album cover of Pink Floyd - The Dark Side of the Moon" src="https://placehold.co/200x200"/>
+            <img alt="Pink Floyd – A Collection Of Great Dance Songs" src="dance-300x300.jpg"/>
             <p>
-             Pink Floyd - The Dark Side of the Moon
+             Pink Floyd – A Collection Of Great Dance Songs
             </p>
             <p>
              70 GEL
             </p>
            </div>
            <div class="product">
-            <img alt="Album cover of Led Zeppelin - IV" src="https://placehold.co/200x200"/>
+            <img alt="Sade – The Best of Sade (Sealed)" src="sade1-1-300x300.webp"/>
             <p>
-             Led Zeppelin - IV
+             Sade – The Best of Sade (Sealed)
             </p>
             <p>
              70 GEL
             </p>
            </div>
            <div class="product">
-            <img alt="Album cover of Nirvana - Nevermind" src="https://placehold.co/200x200"/>
+            <img alt="The Who – Who’s Greatest Hits" src="The-Who-–-Whos-Greatest-Hits-1-300x300.jpg"/>
             <p>
-             Nirvana - Nevermind
+                The Who – Who’s Greatest Hits
             </p>
             <p>
              70 GEL
             </p>
            </div>
            <div class="product">
-            <img alt="Album cover of The Rolling Stones - Let It Bleed" src="https://placehold.co/200x200"/>
+            <img alt="Cigarettes After Sex – Cry (Sealed)" src="cigarettes-300x300.jpg"/>
             <p>
-             The Rolling Stones - Let It Bleed
+                Cigarettes After Sex – Cry (Sealed)
             </p>
             <p>
              70 GEL
             </p>
            </div>
            <div class="product">
-            <img alt="Album cover of Bob Dylan - Highway 61 Revisited" src="https://placehold.co/200x200"/>
+            <img alt="Linkin Park – Hybrid Theory (Sealed)" src="linkin-park-1-300x300.jpg"/>
             <p>
-             Bob Dylan - Highway 61 Revisited
+                Linkin Park – Hybrid Theory (Sealed)
             </p>
             <p>
              70 GEL
             </p>
            </div>
            <div class="product">
-            <img alt="Album cover of David Bowie - The Rise and Fall of Ziggy Stardust and the Spiders from Mars" src="https://placehold.co/200x200"/>
+            <img alt="J DILLA – Donuts (Reissue, Sealed)" src="dilla-300x300.jpg"/>
             <p>
-             David Bowie - The Rise and Fall of Ziggy Stardust and the Spiders from Mars
+                J DILLA – Donuts (Reissue, Sealed)
+            </p>
+            <p>
+             125 GEL
+            </p>
+           </div>
+           <div class="product">
+            <img alt="A Tribe Called Quest – The Low End Theory (2x LP, Sealed)" src="quest-1-300x300.jpg"/>
+            <p>
+                A Tribe Called Quest – The Low End Theory (2x LP, Sealed)
+            </p>
+            <p>
+             95 GEL
+            </p>
+           </div>
+           <div class="product">
+            <img alt="Dizzy Gillespie And The Mitchell-Ruff Duo – In Concert" src="Dizzy-Gillespie-And-The-Mitchell-Ruff-Duo-–-In-Concert-6-300x300.jpg"/>
+            <p>
+                Dizzy Gillespie And The Mitchell-Ruff Duo – In Concert
             </p>
             <p>
              70 GEL
             </p>
            </div>
            <div class="product">
-            <img alt="Album cover of The Clash - London Calling" src="https://placehold.co/200x200"/>
+            <img alt="Chicago – Chicago 17" src="Chicago-3-–-Chicago-17-300x300.jpg"/>
             <p>
-             The Clash - London Calling
+                Chicago – Chicago 17
             </p>
             <p>
              70 GEL
             </p>
            </div>
            <div class="product">
-            <img alt="Album cover of The Who - Who's Next" src="https://placehold.co/200x200"/>
-            <p>
-             The Who - Who's Next
-            </p>
-            <p>
-             70 GEL
-            </p>
-           </div>
-           <div class="product">
-            <img alt="Album cover of Jimi Hendrix - Are You Experienced" src="https://placehold.co/200x200"/>
-            <p>
-             Jimi Hendrix - Are You Experienced
-            </p>
-            <p>
-             70 GEL
-            </p>
-           </div>
-           <div class="product">
-            <img alt="Album cover of The Doors - The Doors" src="https://placehold.co/200x200"/>
+            <img alt="Earl Klugh – Heart String" src="Earl-Klugh-–-Heart-String-22-300x300.jpg"/>
             <p>
              The Doors - The Doors
             </p>
@@ -204,81 +208,81 @@
             </p>
            </div>
            <div class="product">
-            <img alt="Album cover of U2 - The Joshua Tree" src="https://placehold.co/200x200"/>
+            <img alt="Dire Straits – Brothers In Arms" src="დაირ-300x300.jpeg"/>
             <p>
-             U2 - The Joshua Tree
+                Dire Straits – Brothers In Armsww
             </p>
             <p>
              70 GEL
             </p>
            </div>
            <div class="product">
-            <img alt="Album cover of Bruce Springsteen - Born to Run" src="https://placehold.co/200x200"/>
+            <img alt="Mos Def – Black On Both Sides (Reissue, Sealed)" src="def-300x300.jpg"/>
             <p>
-             Bruce Springsteen - Born to Run
+                Mos Def – Black On Both Sides (Reissue, Sealed)
             </p>
             <p>
              70 GEL
             </p>
            </div>
            <div class="product">
-            <img alt="Album cover of Fleetwood Mac - Rumours" src="https://placehold.co/200x200"/>
+            <img alt="Queen - Greatest Hits" src="queen-greatesthits.jpg-300x300.jpg"/>
             <p>
-             Fleetwood Mac - Rumours
+                Queen - Greatest Hits
             </p>
             <p>
              70 GEL
             </p>
            </div>
            <div class="product">
-            <img alt="Album cover of Eagles - Hotel California" src="https://placehold.co/200x200"/>
+            <img alt="Simon & Garfunkel – The Greatest Hits" src="simon-300x300.jpg"/>
             <p>
-             Eagles - Hotel California
+            Simon & Garfunkel – The Greatest Hits
             </p>
             <p>
              70 GEL
             </p>
            </div>
            <div class="product">
-            <img alt="Album cover of AC/DC - Back in Black" src="https://placehold.co/200x200"/>
+            <img alt="სიმღერა თბილისზე (ყანჩელი, ლაღიძე, დურგლიშვილი, ცაბაძე)" src="სიმღერა-თბილისზე-ქავერი-300x300.jpg"/>
             <p>
-             AC/DC - Back in Black
+                სიმღერა თბილისზე (ყანჩელი, ლაღიძე, დურგლიშვილი, ცაბაძე)
             </p>
             <p>
              70 GEL
             </p>
            </div>
            <div class="product">
-            <img alt="Album cover of Metallica - Master of Puppets" src="https://placehold.co/200x200"/>
+            <img alt="ივერია – ალბომი ე.წ. (შავი) ივერია" src="iveria-1-300x300.jpg"/>
             <p>
-             Metallica - Master of Puppets
+            ივერია – ალბომი ე.წ. (შავი) ივერია
             </p>
             <p>
              70 GEL
             </p>
            </div>
            <div class="product">
-            <img alt="Album cover of Guns N' Roses - Appetite for Destruction" src="https://placehold.co/200x200"/>
+            <img alt="Elton John – Sleeping With The Past" src="elton-sleeps-300x300.jpg"/>
             <p>
-             Guns N' Roses - Appetite for Destruction
+                Elton John – Sleeping With The Past
             </p>
             <p>
              70 GEL
             </p>
            </div>
            <div class="product">
-            <img alt="Album cover of Pearl Jam - Ten" src="https://placehold.co/200x200"/>
+            <img alt="აისი – აისი" src="აისი-Front-300x300.jpg"/>
             <p>
-             Pearl Jam - Ten
+                აისი – აისი
             </p>
             <p>
              70 GEL
             </p>
            </div>
            <div class="product">
-            <img alt="Album cover of Red Hot Chili Peppers - Blood Sugar Sex Magik" src="https://placehold.co/200x200"/>
+            <img alt="Pink Floyd – A Foot In The Door (The Best of Pink Floyd), (2 x Vinyl, Sealed)" src="a-foot-in-the-door-300x300.jpg"/>
             <p>
-             Red Hot Chili Peppers - Blood Sugar Sex Magik
+                Pink Floyd – A Foot In The Door (The Best of Pink Floyd), (2 x Vinyl, Sealed)
             </p>
             <p>
              70 GEL
@@ -293,6 +297,17 @@
         <a href="#">5</a>
         <a href="#">...</a>
         <a href="#">21</a>
+    </div>
+    <div class="text-content">
+        <p>
+            მუსიკალური ვინილის ფირფიტების ინტერნეტ მაღაზია. ქართული და უცხოური წარმოების ფირები. აქ შეგიძლიათ აღმოაჩინოთ ორიგინალი პრესის საკოლექციო ვინტაჟური გრამფირფიტები, ან როგორც საბჭოთა კავშირის დროს უწოდებდნენ „პლასტინკები“ კერძო კოლექციონერებისგან. შეგიძლიათ გაიცნოთ თანამედროვე არტისტები სრულიად ახალი “გაუხსნელი” ვინილებით ან რეტრო ჩანაწერების რემასტერებით. ჩვენს ინტერნეტ მაღაზიაში შეგიძლიათ სასაჩუქრე ფირფიტების ყიდვა თქვენი მეგობრებისთვის, ოჯახის წევრებისთვის, კოლეგებისთვის და საყვარელი ადამიანებისთვის. თუ არჩევანის გაკეთება გიჭირთ ჩვენი თანამშრომლები სრულიად უფასოდ გაგიწევენ კონსულტაციას და შეგარჩევინებენ ალბომს, რომელსაც თბილისში 1 (ერთი) საათის განმავლობაში მიიღებთ, ხოლო რეგიონებში მეორე-მესამე დღეს, სპეციალურად დაცული ამანათით. ჩვენს მაღაზიაში ასევე შესაძლებელია ფირფიტების ჩაბარება, როგორც ქართული, ასევე უცხოური ესტრადა ან კლასიკური ნაწარმოებები. თქვენს კოლექციას მაღალი დონის ექსპერტები შეაფასებენ და შესაბამის ფასს დაადგენენ. თუ თქვენთვის სასურველ ვინილს ქალაქში ვერ პოულობთ, ჩვენ შეგვიძლია ალბომის დაჩქარებული წესით ჩამოტანა წინასწარი შეკვეთით. ჩვენი გუნდის წევრები დაგეხმარებიან თქვენი ფირ-საკრავისთვის შესაბამისი ფირის შერჩევაში. იმ შემთხვევაში, თუ შეძენილი ვინტაჟური ვინილის ხარისხი არ მოგეწონებათ, ჩვენ მას უკან დავიბრუნებთ და თანხას სრულად აგინაზღაურებთ. გაიგეთ ქართული, საბჭოთა, ბულგარული ან სულაც უცხოური ორიგინალი და რეპრეს მუსიკალური ფირების ფასები ჩვენთან. თუ ხართ ნამდვილი მელომანი, ან უფრო სწორად – ვინილომანი, მაშინ ეს ვებ გვერდი თქვენთვის არის. გრამფირფიტა ხომ საუკეთესო საჩუქარია ყველა დღესასწაულზე, იქნება ეს შობა-ახალი წელი, სიყვარულის დღე, 8 მარტი, დედის ან მამის დღე და რაც მთავარია, ვინილი დაბადების დღის შეუცვლელი საჩუქარი და მისალოცია. არ დაგავიწყდეთ მუსიკალური ალბომი რეტრო ვინილზე საუკეთესო გადაწყვეტილებაა, როდესაც არ იცი რა აჩუქო …
+        </p>
+        <p>
+            Vinyl record internet shop, with wide variety of records. Georgian and foreign vintage tapes. Here you can find original collectible gramophone record pressings, or as they were called during the Soviet Union time, “Plates” from private collectors. You can discover contemporary artists with brand new sealed albums or remastered copies of old records. In our online store you can buy LP-s as a gift for your friends, family members, colleagues and beloved ones. If you have a hard time making a choice, our employees will give you a free consultation and help you to select an appropriate album which you can receive in Tbilisi within 1 (one) hour. In the regions and other cities, you will receive parcel on the second or third day by. In our internet store it is also possible to hand over or fast sell vinyl records: Georgian folk and contemporary music, foreign pop, rock jazz or classical vinyl records. Your collection will be appraised by high-level experts and the appropriate price will be offered. If you can’t find the vinyl you want in the town, you can pre-order it from our partner warehouses situated in USA and Great Britain. And we will deliver via express delivery. Our team members will help you select the right LP for your record player. If you are not satisfied with the quality of the vinyl you have purchased, we offer full money back guaranty. Find out the prices of Georgian, Soviet, Bulgarian, or foreign original and repress music records through us. If you are a true music lover, or rather a vinyl lover, then this website is for you. After all, Gramophone record is the best gift for any holiday, whether it is Christmas, New Year, Valentine’s Day, March 8, Mother’s or Father’s Day and most importantly, vinyl record is an indispensable birthday gift. Don’t forget that music on vinyl is the best decision, when you can’t select the gift for beloved one …
+        </p>
+        <p>
+            Интернет-магазин музыкальных виниловых пластинок. Грузинские и зарубежные граммофонные записи. Здесь вы можете найти оригинальные коллекционные винилы, как их называли во времена Советского Союза, «пластинки» из частных коллекционеров. Познакомиться с современными артистами можно по новеньким «нераспечатанным» винилам, или ремастерам старых альбомов. В нашем интернет-магазине вы можете купить пластинки в подарок для своих друзей, членов семьи, коллег и близких. Если вы затрудняетесь с выбором, наши сотрудники бесплатно проконсультируют вас и подберут альбом, который вы получите в Тбилиси в течение 1 (одного) часа, а в регионах на второй-третий день. Транспортировка грамзаписи происходит в специально защищенной каробке. У нас также можно сдать пластинки. Можно обсудить как грузинские, так и зарубежные эстрадные или классические произведения. Ваша коллекция будет оценена экспертами высокого уровня и будет определена соответствующая рыночная цена. Если вы не можете найти нужный вам винил в городе, мы можем заказать в ускоренном порядке у наших партнеров в Великобританииб и привезем вам альбом по специальному заказу. Имейте в виду, если вам не понравится качество купленного вами винила, мы заберем его обратно и полностью вернем вам деньги. Цены на музыкальные пластинк – грузинские, советские, болгарские, польские или на иностранные оригинальные  и переиздание вы можете узнать у нас. Если вы настоящий меломан и любитель винила, то этот сайт для вас. Ведь граммофонные виниловое пластинка – это лучший подарок на любой праздник, будь то Рождество, Новый год, День святого Валентина, 8 марта, День матери или День отца и самое главное, винил – это незаменимый подарок на день рождения. Не забывайте, что музыкальный альбом на виниле – лучшее решение, когда не знаете, что подарить…
+        </p>
     </div>
     <footer class="footer">
         <div class="container">
