--- a/Proeqti/Vinyll.ge/index.html
+++ b/Proeqti/Vinyll.ge/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<html lang="ka">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header class="header">
+        <div class="logo">
+            <img src="new-logo-vinyl-ge.png" alt="VINYL.GE Logo">
+        </div>
         <nav>
             <div>
                 <a data-i18n="Mtavari" href="index.html">მთავარი</a>
