SABOLOO SABOLOO SHEDEGI

--- a/Proeqti/Vinyll.ge/index.html
+++ b/Proeqti/Vinyll.ge/index.html
@@ -56,22 +56,23 @@
                 <option value="rock">როკი</option>
                 <option value="pop">პოპ</option>
                 <option value="jazz">ჯაზი</option>
-                <option value="all">ყველა</option>
-                <option value="rock">როკი</option>
-                <option value="pop">პოპ</option>
-                <option value="jazz">ჯაზი</option>
-                <option value="all">ყველა</option>
-                <option value="rock">როკი</option>
-                <option value="pop">პოპ</option>
-                <option value="jazz">ჯაზი</option>
+                <option value="all">დისკო</option>
+                <option value="rock">ბლუზი</option>
+                <option value="pop">კლასიკური</option>
+                <option value="jazz">ხალხური</option>
+                <option value="all">ელექტრო</option>
             </select>
         </div>
         <div>
             <label for="price">მედიის ტიპი</label> <br>
             <select class="select" id="price">
                 <option value="all">ნებისმიერი მედიის ტიპი</option>
-                <option value="low">Low to High</option>
-                <option value="high">High to Low</option>
+                <option value="low">არაოფიცალური გამოშვება</option>
+                <option value="high">კომპაქტ დისკი (CD)</option>
+                <option value="low">ახალი (გაუხსნელი)</option>
+                <option value="high">ორიგინალი</option>
+                <option value="low">პირველი პრესი</option>
+                <option value="high">ექსკლუზივი </option>
             </select>
         </div>
         <div>
@@ -91,7 +92,7 @@
              Elvis Presley - Elvis Presley
             </p>
             <p>
-             70 GEL
+             90 GEL
             </p>
            </div>
            <div class="product">
@@ -100,7 +101,7 @@
                 Eminem - Revival (Sealed)
             </p>
             <p>
-             70 GEL
+             200 GEL
             </p>
            </div>
            <div class="product">
@@ -109,7 +110,7 @@
                 ივერია - ალბომი ივერია (ახალი)
             </p>
             <p>
-             70 GEL
+             180 GEL
             </p>
            </div>
            <div class="product">
@@ -118,7 +119,7 @@
                 Fleetwood Mac – Rumours (Sealed)
             </p>
             <p>
-             70 GEL
+             20 GEL
             </p>
            </div>
            <div class="product">
@@ -127,7 +128,7 @@
              Pink Floyd – A Collection Of Great Dance Songs
             </p>
             <p>
-             70 GEL
+             300 GEL
             </p>
            </div>
            <div class="product">
@@ -145,7 +146,7 @@
                 The Who – Who’s Greatest Hits
             </p>
             <p>
-             70 GEL
+             85 GEL
             </p>
            </div>
            <div class="product">
@@ -154,7 +155,7 @@
                 Cigarettes After Sex – Cry (Sealed)
             </p>
             <p>
-             70 GEL
+             120 GEL
             </p>
            </div>
            <div class="product">
@@ -163,7 +164,7 @@
                 Linkin Park – Hybrid Theory (Sealed)
             </p>
             <p>
-             70 GEL
+             450 GEL
             </p>
            </div>
            <div class="product">
@@ -190,7 +191,7 @@
                 Dizzy Gillespie And The Mitchell-Ruff Duo – In Concert
             </p>
             <p>
-             70 GEL
+             100 GEL
             </p>
            </div>
            <div class="product">
@@ -208,7 +209,7 @@
              The Doors - The Doors
             </p>
             <p>
-             70 GEL
+             60 GEL
             </p>
            </div>
            <div class="product">
@@ -226,7 +227,7 @@
                 Mos Def – Black On Both Sides (Reissue, Sealed)
             </p>
             <p>
-             70 GEL
+             100 GEL
             </p>
            </div>
            <div class="product">
@@ -235,7 +236,7 @@
                 Queen - Greatest Hits
             </p>
             <p>
-             70 GEL
+             80 GEL
             </p>
            </div>
            <div class="product">
@@ -244,7 +245,7 @@
             Simon & Garfunkel – The Greatest Hits
             </p>
             <p>
-             70 GEL
+             110 GEL
             </p>
            </div>
            <div class="product">
@@ -253,7 +254,7 @@
                 სიმღერა თბილისზე (ყანჩელი, ლაღიძე, დურგლიშვილი, ცაბაძე)
             </p>
             <p>
-             70 GEL
+             125 GEL
             </p>
            </div>
            <div class="product">
@@ -262,7 +263,7 @@
             ივერია – ალბომი ე.წ. (შავი) ივერია
             </p>
             <p>
-             70 GEL
+             50 GEL
             </p>
            </div>
            <div class="product">
@@ -271,7 +272,7 @@
                 Elton John – Sleeping With The Past
             </p>
             <p>
-             70 GEL
+             130 GEL
             </p>
            </div>
            <div class="product">
@@ -280,7 +281,7 @@
                 აისი – აისი
             </p>
             <p>
-             70 GEL
+             75 GEL
             </p>
            </div>
            <div class="product">
